fix: contador de reproducciones arreglado
